# drift-downloader

./: BossDefine.java  README.md  pyproject.toml
.github/workflows/: deploy-script.yml  deploy-systemd.yml
app/: constants.py  main.py
app/data/data_sources/ap/: __init__.py
app/data/data_sources/ap_linux/: __init__.py
app/data/data_sources/ap_win/: __init__.py
app/data/data_sources/drift/: __init__.py
app/data/data_sources/file_io/: __init__.py
app/data/data_sources/home_api/: __init__.py  models.py
app/data/models/: __init__.py
app/domain/repositories/ap_manager/: __init__.py
app/domain/use_cases/: check_lock_file.py  connect_ghost.py  connect_normal.py  create_lock_file.py  delete_lock_file.py  download_files.py  get_file_list.py  perform_connect_download.py  update_time.py
systemd/: drift-downloader.service  drift-downloader.timer  run.sh
